kubernetes/ns-common/keycloak/01-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  namespace: common
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image:  tasktrack.telekom.at/remote-docker/jboss/keycloak
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "4Gi"
            cpu: "1000m"
          requests:
            memory: "2Gi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        args: ["-b", "0.0.0.0", "-Djboss.as.management.blocking.timeout=4800"]
      imagePullSecrets:
      - name: tasktrack.telekom.at
