kubernetes/ns-common/keycloak/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: common
spec:
  selector:
    app: keycloak
  ports:
  - port: 8080
    targetPort: 8080
